Bug 15849 - lease code is not endian-safe
Summary: lease code is not endian-safe
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.22.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-16 13:25 UTC by Björn Jacke
Modified: 2025-04-17 17:23 UTC (History)
1 user (show)

See Also:


Attachments
patch for 4.22 (6.77 KB, patch)
2025-04-17 12:29 UTC, Björn Jacke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2025-04-16 13:25:34 UTC
smbd_smb2_send_lease_break is't endian-safe and causes SMB2 leases to fail on all big-endian machines.
Comment 1 Samba QA Contact 2025-04-17 11:31:22 UTC
This bug was referenced in samba master:

31ebf2cd1daeed25fab92ef71f7591fea8c92226
cbe438eb1a3c44f5cd46c5e685da9964da64f892
edf9cf4b29dab78f63eec8391cd1cd9eef861612
80d5fa134d51b4b2238f775fea0af3d511bf3144
Comment 2 Björn Jacke 2025-04-17 12:29:05 UTC
Created attachment 18635 [details]
patch for 4.22
Comment 3 Jule Anger 2025-04-17 13:22:25 UTC
Pushed to autobuild-v4-22-test.
Comment 4 Samba QA Contact 2025-04-17 17:04:22 UTC
This bug was referenced in samba v4-22-test:

db2eac3b62db3a2398c90ef06f6b6e605d22ef8c
f9a02bb284ac0530918955a91a9d764a38ad5b51
93e74025c8899d7f19b2ce00d8240ff1c8c0b4f1
40c8ba32d87da607662bf1dde9aa17f3c91399da
Comment 5 Samba QA Contact 2025-04-17 17:15:51 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.1):

db2eac3b62db3a2398c90ef06f6b6e605d22ef8c
f9a02bb284ac0530918955a91a9d764a38ad5b51
93e74025c8899d7f19b2ce00d8240ff1c8c0b4f1
40c8ba32d87da607662bf1dde9aa17f3c91399da
Comment 6 Jule Anger 2025-04-17 17:23:59 UTC
Closing out bug report.

Thanks!